--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,18 @@
         tools:targetApi="31">
         <activity
             android:name=".SignUp.ui.SignUp"
-            android:exported="false" />
-        <activity
-            android:name=".Login.ui.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity
+            android:name=".Login.ui.LoginActivity"
+            android:exported="true">
+
         </activity>
         <activity
             android:name=".MainActivity"
