organizer home page created +ui chnges

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         <activity
             android:name=".SignUp.ui.SignUp"
             android:exported="true">
+
+
+        </activity>
+        <activity
+            android:name=".Organizer.ui.Home"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
