--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,16 +15,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar"
 
+        android:usesCleartextTraffic="true"
+
         tools:targetApi="31">
         <activity
             android:name=".SignUp.ui.SignUp"
-            android:exported="true">
-
-
+            android:exported="false">
         </activity>
 
         <activity
-            android:name=".Organizer.ui.Home"
+            android:name=".Login.ui.LoginActivity"
             android:exported="true"
             />
         <activity
@@ -39,14 +43,8 @@
 
         </activity>
         <activity
-            android:name=".Login.ui.LoginActivity"
-            android:exported="true">
-
-        </activity>
-        <activity
             android:name=".MainActivity"
-            android:exported="true">
-
+            android:exported="false">
         </activity>
     </application>
 
