--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -14,40 +13,32 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar"
-
         android:usesCleartextTraffic="true"
-
         tools:targetApi="31">
         <activity
+            android:name=".TeamMainActivity"
+            android:exported="false" />
+        <activity
             android:name=".SignUp.ui.SignUp"
-            android:exported="false">
-        </activity>
-
+            android:exported="false" />
         <activity
             android:name=".Login.ui.LoginActivity"
-            android:exported="true"
-
-            >
+            android:exported="false" />
+        <activity
+            android:name=".Room.ui.Dashboard"
+            android:exported="false"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RoleSelectionActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".Organizer.ui.RoomCreate"
-            android:exported="true"
-        />
-        <activity
-            android:name=".Room.ui.Dashboard"
-            android:screenOrientation="landscape"
-            android:exported="true">
-
-
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="false">
         </activity>
     </application>
 
